--- a/index.html
+++ b/index.html
@@ -6,17 +6,80 @@
   <title>给小央妹妹的祝福</title>
   <meta name="description" content="祝小央妹妹天天开心" />
   <style>
-    :root { --bg:#f6f7fb; --card:#ffffff; --shadow:0 10px 30px rgba(0,0,0,.08); }
+    :root { 
+      --bg1:#fdfbfb; 
+      --bg2:#ebedee;
+      --card:#ffffff; 
+      --shadow:0 12px 36px rgba(0,0,0,.08); 
+      --accent:#ff6cab; 
+    }
     * { box-sizing: border-box; }
-    body { margin:0; font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Noto Sans CJK SC","PingFang SC","Microsoft YaHei",sans-serif;
-           background: var(--bg); display:flex; min-height:100vh; align-items:center; justify-content:center; padding:24px; }
-    .card { background:var(--card); border-radius:22px; box-shadow:var(--shadow); padding:48px 40px; text-align:center; max-width:720px; width:100%; }
-    h1 { margin:0 0 12px; font-size:34px; line-height:1.25; }
-    p.lead { margin:0; font-size:18px; color:#444; }
-    .footer { margin-top:20px; font-size:14px; color:#888; }
-    .confetti { position:fixed; inset:0; pointer-events:none; }
-    button.share { margin-top:24px; border:0; background:#111; color:#fff; padding:10px 14px; border-radius:12px; cursor:pointer; font-size:14px; }
-    button.share:active { transform: translateY(1px); }
+    body {
+      margin:0; 
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"PingFang SC","Microsoft YaHei",sans-serif;
+      background: linear-gradient(135deg,var(--bg1),var(--bg2)); 
+      display:flex; 
+      min-height:100vh; 
+      align-items:center; 
+      justify-content:center; 
+      padding:24px; 
+      overflow:hidden;
+    }
+    .card {
+      background:var(--card); 
+      border-radius:26px; 
+      box-shadow:var(--shadow); 
+      padding:56px 44px; 
+      text-align:center; 
+      max-width:760px; 
+      width:100%;
+      position:relative;
+      animation: floaty 6s ease-in-out infinite;
+    }
+    @keyframes floaty {
+      0%,100% { transform: translateY(0px); }
+      50% { transform: translateY(-8px); }
+    }
+    h1 {
+      margin:0 0 16px; 
+      font-size:38px; 
+      line-height:1.25; 
+      background:linear-gradient(90deg,#ff6cab,#7366ff);
+      -webkit-background-clip:text;
+      color:transparent;
+    }
+    p.lead { 
+      margin:0; 
+      font-size:20px; 
+      color:#555; 
+    }
+    .footer { 
+      margin-top:24px; 
+      font-size:14px; 
+      color:#999; 
+    }
+    .confetti { 
+      position:fixed; 
+      inset:0; 
+      pointer-events:none; 
+      z-index:0;
+    }
+    button.share {
+      margin-top:32px; 
+      border:0; 
+      background:var(--accent); 
+      color:#fff; 
+      padding:12px 20px; 
+      border-radius:14px; 
+      cursor:pointer; 
+      font-size:15px;
+      box-shadow:0 6px 16px rgba(255,108,171,0.4);
+      transition:all .2s;
+      z-index:1;
+      position:relative;
+    }
+    button.share:hover { transform:scale(1.05); }
+    button.share:active { transform:scale(0.97); }
   </style>
 </head>
 <body>
@@ -24,19 +87,42 @@
   <div class="card">
     <h1>🎉 祝小央妹妹天天开心 🎉</h1>
     <p class="lead">愿每一天都被温柔对待，笑容常在！</p>
-    <button class="share" id="shareBtn">复制此页面链接</button>
+    <button class="share" id="shareBtn">✨ 复制此页面链接 ✨</button>
     <div class="footer">— 静态网页，可直接部署到 GitHub Pages / Netlify</div>
   </div>
   <script>
-    // 轻量彩带效果
-    const c=document.getElementById('confetti'); const ctx=c.getContext('2d');
-    let W,H,parts=[]; function resize(){W= c.width = innerWidth; H = c.height = innerHeight;}
+    // 彩带效果升级版
+    const c=document.getElementById('confetti'); 
+    const ctx=c.getContext('2d');
+    let W,H,parts=[]; 
+    function resize(){W= c.width = innerWidth; H = c.height = innerHeight;}
     addEventListener('resize', resize); resize();
-    function spawn(n=120){for(let i=0;i<n;i++){parts.push({x:Math.random()*W,y:Math.random()*-H,
-      r:4+Math.random()*6, vx:-1+Math.random()*2, vy:1+Math.random()*3, a:Math.random()*Math.PI})})}
-    function loop(){ctx.clearRect(0,0,W,H); ctx.save(); parts.forEach(p=>{p.x+=p.vx; p.y+=p.vy; p.a+=0.05;
-      ctx.beginPath(); ctx.arc(p.x,p.y,p.r,0,Math.PI*2); ctx.globalAlpha=0.7; ctx.fillStyle=`hsl(${(p.a*60)%360} 90% 60%)`; ctx.fill();
-      if(p.y>H+10) {p.y=-10; p.x=Math.random()*W;} }); ctx.restore(); requestAnimationFrame(loop)}
+    function spawn(n=160){
+      for(let i=0;i<n;i++){
+        parts.push({
+          x:Math.random()*W, 
+          y:Math.random()*-H, 
+          r:4+Math.random()*6, 
+          vx:-1+Math.random()*2, 
+          vy:1+Math.random()*3, 
+          a:Math.random()*Math.PI,
+          hue:Math.random()*360
+        })
+      }
+    }
+    function loop(){
+      ctx.clearRect(0,0,W,H); 
+      parts.forEach(p=>{
+        p.x+=p.vx; p.y+=p.vy; p.a+=0.04;
+        ctx.beginPath(); 
+        ctx.arc(p.x,p.y,p.r,0,Math.PI*2); 
+        ctx.globalAlpha=0.8; 
+        ctx.fillStyle=`hsl(${p.hue+(p.a*40)} 80% 60%)`; 
+        ctx.fill();
+        if(p.y>H+10) {p.y=-10; p.x=Math.random()*W;}
+      }); 
+      requestAnimationFrame(loop)
+    }
     spawn(); loop();
     // 复制链接
     document.getElementById('shareBtn').onclick = async () => {
@@ -46,3 +132,4 @@
   </script>
 </body>
 </html>
+
